--- a/app/src/main/res/drawable/bubble_with_tail_right.xml
+++ b/app/src/main/res/drawable/bubble_with_tail_right.xml
@@ -6,8 +6,8 @@
         tools:width="100dp"
         tools:height="50dp">
         <shape android:shape="rectangle">
-            <corners android:radius="35dp"/>
-            <solid android:color="@color/colorAccent"/>
+            <corners android:radius="15dp"/>
+            <solid android:color="@color/colorPrimary"/>
         </shape>
     </item>
 
@@ -24,7 +24,7 @@
             android:viewportHeight="150.0">
             <path
                 android:pathData="M0,100 C7.67309143,100 14.1935201,100.346373 20.500756,99.0996492 C43.6628959,129.872031 94.1698247,146.306561 150.320843,150.792562 C113.168693,130.799632 87.2808993,98.5054948 81.0808824,68.6524321 C94.1277117,51.7595331 100,23.9957121 100,0 L0,0 L0,100 Z"
-                android:fillColor="@color/colorAccent"/>
+                android:fillColor="@color/colorPrimary"/>
         </vector>
     </item>
 
